<resources>
    <string name="app_name">My Menu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_home">btn_home</string>
    <string name="btn_search">btn_search</string>
    <string name="btn_basket">btn_basket</string>
    <string name="btn_account">btn_account</string>
    <string name="back_to_menu">назад_в_меню</string>
    <string name="Блюдо">Блюдо</string>
    <string name="Суп_рамен">Суп рамен</string>
    <string name="Фунчоза">Фунчоза</string>
    <string name="Лагман_удон">Лагман удон</string>
    <string name="Салат_королевский_с_говядиной">Салат королевский с говядиной</string>
    <string name="Мясо_ассорти_в_соусе">Мясо ассорти в соусе</string>
    <string name="Салат_цезарь">Салат цезарь</string>
    <string name="Блины">Блины</string>
    <string name="Пельмени">Пельмени</string>
    <string name="Шницель">Шницель</string>
    <string name="Рататуй">Рататуй</string>
    <string name="Паэлья_из_утки">Паэлья из утки</string>
    <string name="Фетучинни_с_грибами">Фетучинни с грибами</string>
    <string name="Рулеты_из_ветчины">Рулеты из ветчины</string>
    <string name="Зеленый_салат">Зеленый салат</string>
    <string name="Тортелини">Тортелини</string>
    <string name="Рыба_с_овощами_и_рисом">Рыба с овощами и рисом</string>
    <string name="Салат_по_восточному">Салат по восточному</string>
    <string name="Рис_с_овощами">Рис с овощами</string>
    <string name="с_мясом">с мясом</string>
    <string name="с_рыбой">с рыбой</string>
    <string name="с_рисом">с рисом</string>
    <string name="салаты">салаты</string>
    <string name="все_меню">все меню</string>
    <string name="Добавить_в_корзину">Добавить в корзину</string>
    <string name="name_dish">name_dish</string>
    <string name="price">price</string>
    <string name="weight">Weight</string>
    <string name="краткое_описание">краткое описание</string>
    <string name="info">info</string>
    <string name="avatar">Avatar</string>
    <string name="close">close</string>
    <string name="Найти">Найти</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="basket">Basket</string>
    <string name="account">Account</string>
    <string name="Ошибка_загрузки_категорий">Ошибка загрузки категорий</string>
    <string name="плюс">плюс</string>
    <string name="кол_во">кол-во</string>
    <string name="минус">минус</string>
    <string name="count_price">count_price</string>
    <string name="cat1">cat1</string>
    <string name="название_категории">название категории</string>
    <string name="dish_image">dish_image</string>
    <string name="цена">Цена</string>
    <string name="вес">Вес</string>
    <string name="назад">назад</string>
    <string name="ноль">0</string>
    <string name="К_оплате">К оплате</string>
</resources>