<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/btn_home"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/btn_search"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/btn_basket"
        android:icon="@drawable/basket"
        android:title="@string/basket"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/btn_account"
        android:icon="@drawable/account"
        android:title="@string/account"
        app:showAsAction="ifRoom" />
</menu>