<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeDish"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">


    <ImageView
        android:id="@+id/basket"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/name_dish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/basket"
        android:text="@string/name_dish"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/price_dish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_dish"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/basket"
        android:text="@string/price"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_dish"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/price_dish"
        android:text="@string/weight"
        android:textSize="16sp" />

    <Button
        android:id="@+id/plusBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="15dp"
        android:layout_toEndOf="@id/price_dish"
        android:text="@string/плюс"
        app:icon="@drawable/baseline_exposure_neg_1_24"
        app:rippleColor="#FF5722" />

    <TextView
        android:id="@+id/Count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="55dp"
        android:layout_toEndOf="@id/plusBtn"
        android:text="@string/кол_во"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/minusBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="45dp"
        android:layout_toEndOf="@id/Count"
        android:text="@string/минус"
        app:icon="@drawable/plus" />

    <TextView
        android:id="@+id/Count_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/price_dish"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/basket"
        android:text="@string/count_price" />

</RelativeLayout>
