<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeDish"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">


    <ImageView
        android:id="@+id/urlImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/Блюдо"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/urlImage"
        android:text="@string/name_dish"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/urlImage"
        android:text="@string/price"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/price"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/urlImage"
        android:text="@string/weight"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <ImageButton
        android:id="@+id/plusBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:src="@drawable/plus"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/плюс"
        app:rippleColor="#22FFFF"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/minusBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="15dp"
        android:layout_toEndOf="@+id/price"
        android:gravity="center"
        android:src="@drawable/baseline_exposure_neg_1_24"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/минус"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/count1"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/plusBtn"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_toStartOf="@+id/plusBtn"
        android:layout_toEndOf="@+id/minusBtn"
        android:gravity="center"
        android:text="@string/ноль"
        android:textColor="#000000"
        android:textSize="16sp"
        />

</RelativeLayout>
