<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentation.Fragments.Menu">

    <HorizontalScrollView
        android:id="@+id/btn_scrol"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:ignore="VisualLintBounds">

            <Button
                android:id="@+id/btn_Все_меню"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:text="@string/все_меню"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_салаты"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:text="@string/салаты"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_с_рисом"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:text="@string/с_рисом"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_с_рыбой"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:text="@string/с_рыбой"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_с_мясом"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:text="@string/с_мясом"
                tools:ignore="ButtonStyle,TextContrastCheck" />
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="3dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="3dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_scrol" />


</androidx.constraintlayout.widget.ConstraintLayout>