<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:clickable="true"
    android:focusable="true"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context=".menuMini.presentation.fragment.MenuMini">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/grey"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/close"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="right|top"
            android:layout_margin="10dp"
            android:backgroundTintMode="add"
            android:forceHasOverlappingRendering="false"
            android:foreground="@drawable/close"
            android:gravity="center"
            android:textColor="#151514"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/Image"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/Блюдо"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/name_dish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/name_dish"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/price"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/price"
                android:textColor="#151414"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/weight"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/weight"
                android:textColor="#151414"
                android:textSize="14sp"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center|left"
                android:text="@string/краткое_описание"
                android:textColor="@color/black"
                android:textStyle="normal" />

            <Button
                android:id="@+id/add_Bascket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:clickable="true"
                android:text="@string/Добавить_в_корзину"
                android:textAllCaps="false"
                android:textSize="16sp"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>